fixing contrast with new colors

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -75,7 +75,7 @@ nav li {
    width: 85%;
    height: 10%;
    background-color: rgb(161, 26, 26);
-   color: rgb(176, 176, 176);
+   color: rgb(255, 254, 254);
    text-align: center;
    font-weight: bolder;
 }
